doc: ajustado documentação da API no Swagger
