# src/routes/authorRoutes.js
@@ -4,10 +4,10 @@ import pagination from "../middlewares/pagination.js";
 
 const routes = express.Router();
 
-routes.get("/autores", AuthorController.getAuthors, pagination)
-routes.get("/autores/:id", AuthorController.getById);
-routes.post("/autores", AuthorController.createAuthors);
-routes.put("/autores/:id", AuthorController.updateAuthor);
-routes.delete("/autores/:id", AuthorController.deleteAuthor);
+routes.get("/v1/autores", AuthorController.getAuthors, pagination)
+routes.get("/v1/autores/:id", AuthorController.getById);
+routes.post("/v1/autores", AuthorController.createAuthors);
+routes.put("/v1/autores/:id", AuthorController.updateAuthor);
+routes.delete("/v1/autores/:id", AuthorController.deleteAuthor);
 
 export default routes;
